--- a/content/posts/2019-03-11---블로그 시작해봅니다.md
+++ b/content/posts/2019-03-11---블로그 시작해봅니다.md
@@ -1,5 +1,5 @@
 ---
-title: 블로그 시작해보긔
+title: 블로그 시작해 보려고합니다.
 date: "2019-03-11T11:11:00.121Z"
 template: "post"
 draft: false
@@ -11,5 +11,6 @@ tags:
 description: "블로그 시작할 때의 생각과 앞으로의 방향성의 대해서"
 ---
 
-오늘은 머리가 매우 아픕니다.
-어제 급성 장염때문에 힘듭니다.
+오늘은 머리가 매우 아프기 때문에 좀있다가 시작해야겠습니다.
+
+급성장염은 참 힘드네요...
