--- a/content/posts/2019-03-13---환경 센서 구성하기.md
+++ b/content/posts/2019-03-13---환경 센서 구성하기.md
@@ -32,7 +32,7 @@ description: "라즈베리를 통해서 환경센서 구성하기"
 5. 플랫폼으로 데이터 전송방법
 6. 플랫폼 데이터를 스마트 미러에 띄우기
 
-1. 라즈베리파이 SETTING
+1) 라즈베리파이 SETTING
 =======================
   http://eleparts.co.kr/data/_gextends/good-pdf/201803/good-pdf-4208690-1.pdf
 
