--- a/content/posts/2019-03-13---환경 센서 구성하기.md
+++ b/content/posts/2019-03-13---환경 센서 구성하기.md
@@ -32,7 +32,7 @@ description: "라즈베리를 통해서 환경센서 구성하기"
 5. 플랫폼으로 데이터 전송방법
 6. 플랫폼 데이터를 스마트 미러에 띄우기
 
-1. 라즈베리파이 SETTING
+라즈베리파이 SETTING
 =======================
   http://eleparts.co.kr/data/_gextends/good-pdf/201803/good-pdf-4208690-1.pdf
 
@@ -40,13 +40,18 @@ description: "라즈베리를 통해서 환경센서 구성하기"
 라즈베리 UART를 사용하기 위해서 BLE 통신을 종료합니다.
 
 라즈베리 3버전 이상부터 시리얼과 블루투스의 데이터 중첩이 일어납니다.(Pin8/9)
+
   https://arsviator.blogspot.com/2016/08/3-raspberry-pi-3-uartbluetooth-problem.html
+
 자세한 내용은 위의 블로그를 참조하면 좋습니다.
 
 '/boot/config.txt'에 'dtoverlay=pi3-disable-bt'를 추가
+$$
   'dtoverlay=pi3-disable-bt'
-
+$$
 UART1을 사용하지 않는걸로 해서 블루투스를 비활성화 시킨다. 
+$$
   "sudo systemctl disable hciuart" 
+$$
 명령 추가로 실행해 줘야 한다.
 
