--- a/content/posts/2019-03-13---환경 센서 구성하기.md
+++ b/content/posts/2019-03-13---환경 센서 구성하기.md
@@ -37,6 +37,16 @@ description: "라즈베리를 통해서 환경센서 구성하기"
   http://eleparts.co.kr/data/_gextends/good-pdf/201803/good-pdf-4208690-1.pdf
 
 라즈베리파이 3b를 사용하였습니다.
+
+먼저 라즈비안을 SD카드에 업로드 시킵니다.
+
+라즈비안 Stretch를 사용 하였습니다.
+
+  https://www.raspberrypi.org/downloads/raspbian/
+
+![Nulla faucibus vestibulum eros in tempus. Vestibulum tempor imperdiet velit nec dapibus](/media/rasbianStrechDownload.PNG)
+
+
 라즈베리 UART를 사용하기 위해서 BLE 통신을 종료합니다.
 
 라즈베리 3버전 이상부터 시리얼과 블루투스의 데이터 중첩이 일어납니다.(Pin8/9)
@@ -46,12 +56,19 @@ description: "라즈베리를 통해서 환경센서 구성하기"
 자세한 내용은 위의 블로그를 참조하면 좋습니다.
 
 '/boot/config.txt'에 'dtoverlay=pi3-disable-bt'를 추가
+
 $$
   'dtoverlay=pi3-disable-bt'
 $$
+
+
 UART1을 사용하지 않는걸로 해서 블루투스를 비활성화 시킨다. 
+
 $$
   "sudo systemctl disable hciuart" 
 $$
-명령 추가로 실행해 줘야 한다.
+
+명령을 추가로 실행합니다.
+
+
 
