--- a/content/posts/2019-03-13---환경 센서 구성하기.md
+++ b/content/posts/2019-03-13---환경 센서 구성하기.md
@@ -44,7 +44,7 @@ description: "라즈베리를 통해서 환경센서 구성하기"
 
   https://www.raspberrypi.org/downloads/raspbian/
 
-![Nulla faucibus vestibulum eros in tempus. Vestibulum tempor imperdiet velit nec dapibus](/media/rasbianStrechDownload.PNG)
+![Nulla faucibus vestibulum eros in tempus. Vestibulum tempor imperdiet velit nec dapibus](/media/rasbianStrechDownload.jpg)
 
 
 라즈베리 UART를 사용하기 위해서 BLE 통신을 종료합니다.
