--- a/content/posts/2019-03-19---환경 센서 구성하기(2).md
+++ b/content/posts/2019-03-19---환경 센서 구성하기(2).md
@@ -34,4 +34,13 @@ description: "라즈베리를 통해서 환경센서 구성하기"
 
 SENSOR CONNECTION
 =======================
+
+사용되는 센서의 종류
+- PMS5003, DHT11 두가지를 사용합니다.
+
+라즈베리에 연결하는 PIN MAP
+
+PMS 및 DHT 센서의 PIN MAP
+
+ARDUINO 에서 사용할때 방법 PIN MAP
  
