--- a/content/posts/2019-03-19---환경 센서 구성하기(2).md
+++ b/content/posts/2019-03-19---환경 센서 구성하기(2).md
@@ -40,7 +40,11 @@ SENSOR CONNECTION
 
 라즈베리에 연결하는 PIN MAP
 
+(/media/raspberrypi3bPinmap.png)
+
 PMS 및 DHT 센서의 PIN MAP
+
+(/media/pms5003_pinout.png)
 
 ARDUINO 에서 사용할때 방법 PIN MAP
  
