--- a/content/posts/2019-03-19---환경 센서 구성하기(2).md
+++ b/content/posts/2019-03-19---환경 센서 구성하기(2).md
@@ -38,13 +38,33 @@ SENSOR CONNECTION
 사용되는 센서의 종류
 - PMS5003, DHT11 두가지를 사용합니다.
 
+환경 센서를 연결하는 주체는 Arduino와 Raspberry pi 를 사용합니다.
+Arduino = nodemcu 1.0 12E 버전을 사용합니다.
+RaspberryPi = 3b 버전을 사용합니다.
+
 라즈베리에 연결하는 PIN MAP
 
-(/media/raspberrypi3bPinmap.png)
+![Nulla faucibus vestibulum eros in tempus. Vestibulum tempor imperdiet velit nec dapibus](/media/raspberrypi3bPinmap.png)
 
 PMS 및 DHT 센서의 PIN MAP
 
-(/media/pms5003_pinout.png)
+![Nulla faucibus vestibulum eros in tempus. Vestibulum tempor imperdiet velit nec dapibus](/media/pms5003_pinout.png)
 
 ARDUINO 에서 사용할때 방법 PIN MAP
- 
+
+![Nulla faucibus vestibulum eros in tempus. Vestibulum tempor imperdiet velit nec dapibus](/media/nodemcu_pins.png)
+
+##PMS5003
+###Main characteristics
+Zero false alarm rate
+Real-time response
+Correct data
+Minimum distinguishable particle diameter :0.3 micrometer
+High anti-interference performance because of the patent structure of six sides shielding
+Optional direction of air inlet and outlet in order to adapt the different design
+
+NodeRed 설정에서 PMS5003 센서값과 DHT11 센서값을 바로 읽어 올 수 있습니다.
+
+다음 환경 센서 구성하기(3)를 통해서 코드 보시고 이해하시면 될 것 같습니다.
+
+이 장에서는 환경센서 H/W 부분입니다. Pin을 알맞은 곳에 장착하고 센서 값을 아두이노나 라즈베리파이로 전송시킬 수 있는 기반을 마련합니다.
